--- a/LoanIt/deno.json
+++ b/LoanIt/deno.json
@@ -4,6 +4,7 @@
   },
   "imports": {
     "@oak/oak": "jsr:@oak/oak@^17.1.3",
-    "@std/assert": "jsr:@std/assert@1"
+    "@std/assert": "jsr:@std/assert@1",
+    "npm:joi": "npm:joi@17.12.0"
   }
 }
