--- a/LoanIt/deno.json
+++ b/LoanIt/deno.json
@@ -1,6 +1,6 @@
 {
   "tasks": {
-    "dev": "deno run --watch main.ts"
+    "dev": "deno run --watch --unstable-kv --allow-net main.ts"
   },
   "imports": {
     "@oak/oak": "jsr:@oak/oak@^17.1.3",
