--- a/LoanIt/package.json
+++ b/LoanIt/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "vue": "^3.5.22",
+    "vue-final-modal": "^4.5.5",
     "vue-router": "^4.6.3"
   },
   "devDependencies": {
