--- a/LoanIt/docker-compose.yml
+++ b/LoanIt/docker-compose.yml
@@ -1,4 +1,4 @@
-version: '3.8'
+version: "3.8"
 
 services:
   backend:
@@ -7,7 +7,7 @@ services:
       dockerfile: Dockerfile.backend
     container_name: loanit-backend
     ports:
-      - "3000:3000"
+      - "3001:3000" # Host-Port 3001, Container-Port 3000
     environment:
       - DENO_ENV=production
     volumes:
@@ -17,7 +17,13 @@ services:
       - loanit-network
     restart: unless-stopped
     healthcheck:
-      test: ["CMD", "deno", "eval", "fetch('http://localhost:3000/items').then(r => r.ok ? 0 : 1)"]
+      test:
+        [
+          "CMD",
+          "deno",
+          "eval",
+          "fetch('http://localhost:3000/items').then(r => r.ok ? 0 : 1)",
+        ]
       interval: 30s
       timeout: 10s
       retries: 3
@@ -31,7 +37,7 @@ services:
     ports:
       - "8080:80"
     environment:
-      - VITE_API_URL=http://localhost:3000
+      - VITE_API_URL=http://localhost:3001
     depends_on:
       - backend
     networks:
@@ -45,4 +51,3 @@ volumes:
 networks:
   loanit-network:
     driver: bridge
-
